@@ -1,5 +1,6 @@
 				/* Sparse triangular numeric matrices */
 #include "dtCMatrix.h"
+#include "cs_utils.h"
 
 SEXP tsc_validate(SEXP x)
 {
@@ -141,6 +142,7 @@ SEXP Parent_inverse(SEXP par, SEXP unitdiag)
     return ans;
 }
 
+#if 0
 SEXP dtCMatrix_solve(SEXP a)
 {
     SEXP ans = PROTECT(NEW_OBJECT(MAKE_CLASS("dtCMatrix")));
@@ -188,9 +190,73 @@ SEXP dtCMatrix_solve(SEXP a)
 	bp[j] = bpnew;
     }
     /* insert code for calculating the actual values here */
-    for (j = 0; j < bnz; j++) bx[j] = NA_REAL;
+    for (j = 0; j < bnz; j++) bx[j] = 1;
 
     Free(ind); Free(ri);
+    UNPROTECT(1);
+    return ans;
+}
+#else
+SEXP dtCMatrix_solve(SEXP a)
+{
+    SEXP ans = PROTECT(NEW_OBJECT(MAKE_CLASS("dtCMatrix")));
+    cs *A = Matrix_as_cs(a);
+    int *bp = INTEGER(ALLOC_SLOT(ans, Matrix_pSym, INTSXP, (A->n) + 1)),
+	lo = uplo_P(a)[0] == 'L',
+	bnz = 10 * A->n;	/* initial estimate of nnz in b */
+    int *ti = Calloc(bnz, int), i, j, nz, pos = 0;
+    double *tx = Calloc(bnz, double), *wrk = Calloc(A->n, double);
+
+    SET_SLOT(ans, Matrix_DimSym, duplicate(GET_SLOT(a, Matrix_DimSym)));
+    SET_SLOT(ans, Matrix_DimNamesSym,
+	     duplicate(GET_SLOT(a, Matrix_DimNamesSym)));
+    SET_SLOT(ans, Matrix_uploSym, duplicate(GET_SLOT(a, Matrix_uploSym)));
+    SET_SLOT(ans, Matrix_diagSym, duplicate(GET_SLOT(a, Matrix_diagSym)));
+    bp[0] = 0;
+    for (j = 0; j < A->n; j++) {
+	AZERO(wrk, A->n);
+	wrk[j] = 1;
+	lo ? cs_lsolve(A, wrk) : cs_usolve(A, wrk);
+	for (i = 0, nz = 0; i < A->n; i++) if (wrk[i]) nz++;
+	bp[j + 1] = nz + bp[j];
+	if (bp[j + 1] > bnz) {
+	    while (bp[j + 1] > bnz) bnz *= 2;
+	    ti = Realloc(ti, bnz, int);
+	    tx = Realloc(tx, bnz, double);
+	}
+	for (i = 0; i < A->n; i++)
+	    if (wrk[i]) {ti[pos] = i; tx[pos] = wrk[i]; pos++;}
+    }
+    nz = bp[A->n];
+    Memcpy(INTEGER(ALLOC_SLOT(ans, Matrix_iSym, INTSXP, nz)), ti, nz);
+    Memcpy(REAL(ALLOC_SLOT(ans, Matrix_xSym, REALSXP, nz)), tx, nz);
+
+    Free(A); Free(ti); Free(tx);
+    UNPROTECT(1);
+    return ans;
+}
+#endif
+
+SEXP dtCMatrix_matrix_solve(SEXP a, SEXP b, SEXP classed)
+{
+    int cl = asLogical(classed);
+    SEXP ans = PROTECT(NEW_OBJECT(MAKE_CLASS("dgeMatrix")));
+    cs *A = Matrix_as_cs(a);    
+    int *adims = INTEGER(GET_SLOT(a, Matrix_DimSym)),
+	*bdims = INTEGER(cl ? GET_SLOT(b, Matrix_DimSym) :
+			 getAttrib(b, R_DimSymbol));
+    int j, n = bdims[0], nrhs = bdims[1], lo = (*uplo_P(a) == 'L');
+    double *bx;
+
+    if (*adims != n || nrhs < 1 || *adims < 1 || *adims != adims[1])
+	error(_("Dimensions of system to be solved are inconsistent"));
+    Memcpy(INTEGER(ALLOC_SLOT(ans, Matrix_DimSym, INTSXP, 2)), bdims, 2);
+    /* copy dimnames or Dimnames as well */
+    bx = Memcpy(REAL(ALLOC_SLOT(ans, Matrix_xSym, REALSXP, n * nrhs)),
+		REAL(cl ? GET_SLOT(b, Matrix_xSym):b), n * nrhs);
+    for (j = 0; j < nrhs; j++)
+	lo ? cs_lsolve(A, bx + n * j) : cs_usolve(A, bx + n * j);
+    Free(A);
     UNPROTECT(1);
     return ans;
 }
